--- a/Native/rust_native/Cargo.toml
+++ b/Native/rust_native/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "rust_native"
+name = "__rust_native"
 crate-type = ["dylib"]
 
 [dependencies]
-num = "0.2.1"
